# Voroojak

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  SPECS.md  TELEGRAM_MENU.md  TILE_BUTTONS.md  pyproject.toml  schema.sql  vercel.json
api/: webhook.py
docs/: DEPLOYMENT.md  IMPLEMENTATION.md  TILE_BUTTONS.md
src/: __init__.py  config.py  utils.py
src/bot/: __init__.py  handlers.py  keyboards.py
src/db/: __init__.py  client.py  models.py  operations.py
src/llm/: engine.py  formatters.py
src/llm/backends/: chat_completion.py  responses.py
src/services/: file_service.py  openai_service.py
